# hw2

./: CMakeLists.txt  README.md  main.cpp
inc/: fastMultiplication.h  standardMultiplication.h
test/: generateNums.h  numbers.txt  test.h
